frontend/test/should_fail/emit_deleted.grg
rule DeleteRule {
    n:Node;
    modify{
        delete(n);
	---
        emit("1 value of attribute found node " + nameof(n) +"\n");
    }
}
